[package]
name = "grok2api-rs"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1.44", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.8", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
bytes = "1.6"
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
fs2 = "0.4"
mime_guess = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
urlencoding = "2.1"
once_cell = "1.19"
tokio-util = { version = "0.7", features = ["codec", "io"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
async-stream = "0.3"
sha1 = "0.10"
url = "2.5"
rust-embed = "8.5"
wreq = { version = "6.0.0-rc.27", features = ["stream", "json", "gzip", "brotli", "deflate", "zstd"] }
wreq-util = "3.0.0-rc.9"
